--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,46 +5,60 @@ on:
     branches:
       - main
   workflow_dispatch:
-
-concurrency:
-  group: terraform-main
-  cancel-in-progress: true
+    inputs:
+      action:
+        description: "Terraform action (apply or destroy)"
+        required: true
+        default: "apply"
 
 jobs:
   terraform:
-    name: Terraform Apply
-    runs-on: ubuntu-latest
+    name: Terraform Infrastructure
+    runs-on: self-hosted   
 
-    defaults:
-      run:
-        working-directory: terraform
+    env:
+      TF_VERSION: "1.6.6"
+      TF_ROOT: "terraform"
+      TF_VARS_FILE: "nonprod.tfvars"
+      AWS_REGION: "eu-west-1"
 
     steps:
+      # 1️⃣ Checkout
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2️⃣ Install Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.6.6
+          terraform_version: ${{ env.TF_VERSION }}
 
+      # 3️⃣ Configure AWS Credentials
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      # 4️⃣ Terraform Init
       - name: Terraform Init
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+        working-directory: ${{ env.TF_ROOT }}
         run: terraform init
 
+      # 5️⃣ Terraform Plan
       - name: Terraform Plan
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-        run: terraform plan -var-file=nonprod.tfvars
+        working-directory: ${{ env.TF_ROOT }}
+        run: terraform plan -var-file=${{ env.TF_VARS_FILE }}
 
+      # 6️⃣ Terraform Apply
       - name: Terraform Apply
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-        run: terraform apply -auto-approve -var-file=nonprod.tfvars
+        if: ${{ github.event.inputs.action != 'destroy' }}
+        working-directory: ${{ env.TF_ROOT }}
+        run: terraform apply -auto-approve -var-file=${{ env.TF_VARS_FILE }}
+
+      # 7️⃣ Terraform Destroy
+      - name: Terraform Destroy
+        if: ${{ github.event.inputs.action == 'destroy' }}
+        working-directory: ${{ env.TF_ROOT }}
+        run: terraform destroy -auto-approve -var-file=${{ env.TF_VARS_FILE }}
