--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,64 +1,54 @@
-name: Terraform Apply
+name: Terraform Infrastructure
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
     inputs:
       action:
-        description: "Terraform action (apply or destroy)"
+        description: "Terraform action"
         required: true
-        default: "apply"
+        default: apply
+        type: choice
+        options:
+          - apply
+          - destroy
 
 jobs:
   terraform:
     name: Terraform Infrastructure
-    runs-on: self-hosted   
+    runs-on: self-hosted
 
-    env:
-      TF_VERSION: "1.6.6"
-      TF_ROOT: "terraform"
-      TF_VARS_FILE: "nonprod.tfvars"
-      AWS_REGION: "eu-west-1"
+    defaults:
+      run:
+        shell: bash
+        working-directory: terraform
 
     steps:
-      # 1️⃣ Checkout
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Install Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: ${{ env.TF_VERSION }}
+          terraform_version: 1.6.6
 
-      # 3️⃣ Configure AWS Credentials
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: eu-west-1
 
-      # 4️⃣ Terraform Init
       - name: Terraform Init
-        working-directory: ${{ env.TF_ROOT }}
         run: terraform init
 
-      # 5️⃣ Terraform Plan
       - name: Terraform Plan
-        working-directory: ${{ env.TF_ROOT }}
-        run: terraform plan -var-file=${{ env.TF_VARS_FILE }}
+        if: ${{ github.event.inputs.action == 'apply' }}
+        run: terraform plan -var-file=nonprod.tfvars
 
-      # 6️⃣ Terraform Apply
       - name: Terraform Apply
-        if: ${{ github.event.inputs.action != 'destroy' }}
-        working-directory: ${{ env.TF_ROOT }}
-        run: terraform apply -auto-approve -var-file=${{ env.TF_VARS_FILE }}
+        if: ${{ github.event.inputs.action == 'apply' }}
+        run: terraform apply -auto-approve -var-file=nonprod.tfvars
 
-      # 7️⃣ Terraform Destroy
       - name: Terraform Destroy
         if: ${{ github.event.inputs.action == 'destroy' }}
-        working-directory: ${{ env.TF_ROOT }}
-        run: terraform destroy -auto-approve -var-file=${{ env.TF_VARS_FILE }}
+        run: terraform destroy -auto-approve -var-file=nonprod.tfvars
