--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -1,73 +1,69 @@
-name: Bootstrap EKS Cluster
+name: Bootstrap EKS
 
 on:
   workflow_dispatch:
 
 jobs:
   bootstrap:
-    name: Bootstrap EKS
+    name: Bootstrap EKS Cluster
     runs-on: self-hosted
 
+    env:
+      AWS_REGION: eu-west-1
+      CLUSTER_NAME: nti-nonprod-eks
+
     steps:
-      # =========================
-      # Checkout
-      # =========================
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # =========================
-      # Configure AWS credentials
-      # =========================
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
+          aws-region: ${{ env.AWS_REGION }}
 
-      # =========================
-      # Update kubeconfig
-      # =========================
       - name: Update kubeconfig
         run: |
           aws eks update-kubeconfig \
-            --region eu-west-1 \
-            --name nti-nonprod-eks
+            --region $AWS_REGION \
+            --name $CLUSTER_NAME
 
-      # =========================
-      # Verify cluster access
-      # =========================
       - name: Verify cluster access
-        run: kubectl get nodes
+        run: |
+          kubectl get nodes
 
-      # =========================
-      # Install Helm (SAFE WAY)
-      # =========================
+      # =======================
+      # Install Helm (NO sudo)
+      # =======================
       - name: Install Helm
         run: |
           set -e
+          mkdir -p $HOME/bin
           curl -fsSL https://get.helm.sh/helm-v3.14.4-linux-amd64.tar.gz -o helm.tar.gz
           tar -xzf helm.tar.gz
-          sudo mv linux-amd64/helm /usr/local/bin/helm
+          mv linux-amd64/helm $HOME/bin/helm
+          chmod +x $HOME/bin/helm
+          echo "$HOME/bin" >> $GITHUB_PATH
           helm version
 
-      # =========================
+      # =======================
       # Create namespaces
-      # =========================
+      # =======================
       - name: Create namespaces
         run: |
           kubectl apply -f bootstrap/namespaces.yaml
 
-      # =========================
+      # =======================
       # Install Ingress NGINX
-      # =========================
+      # =======================
       - name: Install Ingress NGINX
         run: |
           bash bootstrap/helm/ingress-nginx.sh
 
-      # =========================
+      # =======================
       # Install ArgoCD
-      # =========================
+      # =======================
       - name: Install ArgoCD
         run: |
           bash bootstrap/helm/argocd.sh
