--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: CI - Build & Push Docker Image to ECR
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -37,9 +38,5 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Print Image URI
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: cloud-native-sample-app
-          IMAGE_TAG: ${{ github.sha }}
         run: |
-          echo "IMAGE_URI=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          echo "Image pushed successfully 🎉"
