--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -59,7 +59,7 @@ jobs:
       # Destroy Flow (Cleanup First)
       # ===============================
 
-      # 7️⃣ Install kubectl (Destroy only) - Stable Method (No apt-get)
+      # 7️⃣ Install kubectl (Destroy only) - No apt-get
       - name: Install kubectl
         if: ${{ github.event.inputs.action == 'destroy' }}
         run: |
@@ -75,38 +75,33 @@ jobs:
           sudo mv kubectl /usr/local/bin/kubectl
           kubectl version --client || true
 
-      # 8️⃣ Detect if EKS cluster exists in state (Destroy only)
-      - name: Detect EKS Cluster Name
+      # 8️⃣ Detect EKS Cluster (Destroy only) - Safe AWS detection
+      - name: Detect EKS Cluster
         if: ${{ github.event.inputs.action == 'destroy' }}
         id: detect_cluster
         continue-on-error: true
         run: |
-          echo "Trying to detect EKS cluster name from state..."
+          echo "Searching for EKS clusters in region eu-west-1..."
 
-          CLUSTER_NAME=$(terraform console <<EOF
-try(module.eks.cluster_name, "")
-EOF
-          )
+          CLUSTER_NAME=$(aws eks list-clusters --region eu-west-1 --query "clusters[0]" --output text 2>/dev/null || echo "")
 
-          CLUSTER_NAME=$(echo "$CLUSTER_NAME" | tr -d '"' | xargs)
-
-          if [ -z "$CLUSTER_NAME" ]; then
-            echo "No cluster found in state. Skipping kubeconfig + cleanup."
+          if [ "$CLUSTER_NAME" = "None" ] || [ -z "$CLUSTER_NAME" ]; then
+            echo "No EKS cluster found. Skipping cleanup."
             echo "has_cluster=false" >> $GITHUB_OUTPUT
           else
-            echo "Cluster found: $CLUSTER_NAME"
+            echo "Found cluster: $CLUSTER_NAME"
             echo "has_cluster=true" >> $GITHUB_OUTPUT
             echo "cluster_name=$CLUSTER_NAME" >> $GITHUB_OUTPUT
           fi
 
-      # 9️⃣ Update kubeconfig (Only if cluster exists)
+      # 9️⃣ Update kubeconfig (only if cluster exists)
       - name: Update kubeconfig
         if: ${{ github.event.inputs.action == 'destroy' && steps.detect_cluster.outputs.has_cluster == 'true' }}
         continue-on-error: true
         run: |
           aws eks update-kubeconfig --region eu-west-1 --name "${{ steps.detect_cluster.outputs.cluster_name }}" || true
 
-      # 🔟 Cleanup Kubernetes Resources (Only if cluster exists)
+      # 🔟 Cleanup Kubernetes Resources (only if cluster exists)
       - name: Cleanup Kubernetes Resources
         if: ${{ github.event.inputs.action == 'destroy' && steps.detect_cluster.outputs.has_cluster == 'true' }}
         continue-on-error: true
@@ -115,8 +110,6 @@ EOF
           kubectl delete ingress --all -A --ignore-not-found=true || true
 
           echo "Deleting services of type LoadBalancer..."
-          kubectl get svc -A 2>/dev/null | grep LoadBalancer || echo "No LoadBalancer services found"
-
           kubectl get svc -A -o jsonpath='{range .items[?(@.spec.type=="LoadBalancer")]}{.metadata.namespace}{" "}{.metadata.name}{"\n"}{end}' \
             | while read ns name; do
                 if [ -n "$ns" ] && [ -n "$name" ]; then
@@ -125,30 +118,15 @@ EOF
                 fi
               done
 
-          echo "Deleting namespaces that create AWS LoadBalancers..."
+          echo "Deleting namespaces..."
           kubectl delete ns ingress-nginx --ignore-not-found=true || true
           kubectl delete ns argocd --ignore-not-found=true || true
           kubectl delete ns datadog --ignore-not-found=true || true
 
-          echo "Waiting for LoadBalancer services cleanup..."
-          for i in {1..40}; do
-            LB_COUNT=$(kubectl get svc -A 2>/dev/null | grep -c LoadBalancer || true)
-            if [ "$LB_COUNT" -eq 0 ]; then
-              echo "No LoadBalancer services found ✅"
-              break
-            fi
-            echo "Still LoadBalancer services exist... waiting ($i/40)"
-            sleep 15
-          done
-
-      # 11️⃣ Extra wait for AWS cleanup
-      - name: Extra wait for AWS cleanup
-        if: ${{ github.event.inputs.action == 'destroy' && steps.detect_cluster.outputs.has_cluster == 'true' }}
-        run: |
-          echo "Waiting extra 240 seconds for AWS ENIs/ELB cleanup..."
+          echo "Waiting 240 seconds for AWS cleanup..."
           sleep 240
 
-      # 12️⃣ Terraform Destroy
+      # 11️⃣ Terraform Destroy
       - name: Terraform Destroy
         if: ${{ github.event.inputs.action == 'destroy' }}
         run: terraform destroy -auto-approve -var-file=nonprod.tfvars
