Add ArgoCD application + deploy workflow

--- a/gitops/nonprod/sample-app/argocd-app.yaml
+++ b/gitops/nonprod/sample-app/argocd-app.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
 
   source:
-    repoURL: https://github.com/kerolosashraf2025/cloud-native-devops-nti
+    repoURL: https://github.com/kerolosashraf2025/cloud-native-devops-nti.git
     targetRevision: main
     path: gitops/nonprod/sample-app
 
