--- a/.github/workflows/argocd-deploy.yml
+++ b/.github/workflows/argocd-deploy.yml
@@ -1,4 +1,4 @@
-name: ArgoCD Deploy Sample App
+name: Deploy Sample App via ArgoCD
 
 on:
   workflow_dispatch:
@@ -8,10 +8,16 @@ jobs:
     name: Deploy Sample App via ArgoCD
     runs-on: self-hosted
 
+    defaults:
+      run:
+        shell: bash
+
     steps:
+      # 1️⃣ Checkout Repo
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2️⃣ Configure AWS Credentials
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -19,22 +25,58 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
 
+      # 3️⃣ Install kubectl (FAST & SAFE)
       - name: Install kubectl
         run: |
-          sudo apt-get update -y
-          sudo apt-get install -y kubectl
-          kubectl version --client
+          if command -v kubectl >/dev/null 2>&1; then
+            echo "kubectl already installed ✅"
+            kubectl version --client
+          else
+            echo "Installing kubectl..."
+            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+            chmod +x kubectl
+            sudo mv kubectl /usr/local/bin/kubectl
+            kubectl version --client
+          fi
 
+      # 4️⃣ Update kubeconfig
       - name: Update kubeconfig
-        working-directory: terraform
         run: |
-          CLUSTER_NAME=$(terraform output -raw eks_cluster_name)
-          aws eks update-kubeconfig --region eu-west-1 --name $CLUSTER_NAME
+          aws eks update-kubeconfig --region eu-west-1 --name nti-nonprod-eks
+          kubectl get nodes
 
+      # 5️⃣ Apply ArgoCD Application (Deploy Sample App)
       - name: Apply ArgoCD Application
         run: |
-          kubectl apply -f gitops/nonprod/sample-app/argocd-app.yaml
-
-      - name: Check Application Status
-        run: |
+          kubectl apply -f gitops/nonprod/argocd/sample-app-application.yaml
           kubectl get applications -n argocd
+
+      # 6️⃣ Wait for ArgoCD App Sync
+      - name: Wait for Application to be Healthy
+        run: |
+          echo "Waiting for ArgoCD Application to be Healthy..."
+          for i in {1..30}; do
+            STATUS=$(kubectl get application sample-app -n argocd -o jsonpath="{.status.health.status}" 2>/dev/null || echo "NotFound")
+            SYNC=$(kubectl get application sample-app -n argocd -o jsonpath="{.status.sync.status}" 2>/dev/null || echo "NotFound")
+
+            echo "Health: $STATUS | Sync: $SYNC"
+
+            if [[ "$STATUS" == "Healthy" && "$SYNC" == "Synced" ]]; then
+              echo "Application is Healthy and Synced ✅"
+              exit 0
+            fi
+
+            sleep 10
+          done
+
+          echo "Application did not become Healthy in time ❌"
+          kubectl get application sample-app -n argocd -o yaml
+          exit 1
+
+      # 7️⃣ Print Ingress URL
+      - name: Show Ingress URL
+        run: |
+          echo "Ingress Info:"
+          kubectl get ingress -A
+          echo "LoadBalancer Services:"
+          kubectl get svc -A | grep LoadBalancer || true
