--- a/gitops/nonprod/argocd/sample-app-application.yaml
+++ b/gitops/nonprod/argocd/sample-app-application.yaml
@@ -3,6 +3,15 @@ kind: Application
 metadata:
   name: sample-app
   namespace: argocd
+
+  annotations:
+    # ArgoCD Image Updater Config
+    argocd-image-updater.argoproj.io/image-list: sample=842303506852.dkr.ecr.eu-west-1.amazonaws.com/cloud-native-sample-app
+    argocd-image-updater.argoproj.io/sample.update-strategy: newest-build
+    argocd-image-updater.argoproj.io/sample.allow-tags: regexp:.*
+    argocd-image-updater.argoproj.io/write-back-method: git
+    argocd-image-updater.argoproj.io/write-back-target: kustomization
+
 spec:
   project: default
 
