Add ArgoCD application + deploy workflow

--- a/.github/workflows/deploy-sample-app-argocd.yml
+++ b/.github/workflows/deploy-sample-app-argocd.yml
@@ -3,6 +3,9 @@ name: Deploy Sample App via ArgoCD
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: self-hosted
@@ -10,6 +13,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
