Enable ArgoCD Image Updater for sample app

--- a/gitops/nonprod/argocd/sample-app-application.yaml
+++ b/gitops/nonprod/argocd/sample-app-application.yaml
@@ -4,24 +4,22 @@ metadata:
   name: sample-app
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: sample=842303506852.dkr.ecr.eu-west-1.amazonaws.com/cloud-native-sample-app
-    argocd-image-updater.argoproj.io/sample.update-strategy: newest-build
-    argocd-image-updater.argoproj.io/sample.allow-tags: regexp:.*
-    argocd-image-updater.argoproj.io/sample.force-update: "true"
+    argocd-image-updater.argoproj.io/image-list: sampleapp=842303506852.dkr.ecr.eu-west-1.amazonaws.com/cloud-native-sample-app
+    argocd-image-updater.argoproj.io/sampleapp.update-strategy: latest
+    argocd-image-updater.argoproj.io/sampleapp.allow-tags: regexp:^[a-f0-9]{40}$
+    argocd-image-updater.argoproj.io/sampleapp.pull-secret: pullsecret:argocd/ecr-pull-secret
     argocd-image-updater.argoproj.io/write-back-method: git
-    argocd-image-updater.argoproj.io/write-back-target: kustomization
+    argocd-image-updater.argoproj.io/git-branch: main
+
 spec:
   project: default
-
   source:
     repoURL: https://github.com/kerolosashraf2025/cloud-native-devops-nti.git
     targetRevision: main
     path: gitops/nonprod/sample-app
-
   destination:
     server: https://kubernetes.default.svc
     namespace: default
-
   syncPolicy:
     automated:
       prune: true
