--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,11 +1,25 @@
-FROM node:18-alpine
+# 
+# Build Stage
+# 
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
 COPY package.json package-lock.json* ./
-RUN npm install --production
+RUN npm install
 
 COPY . .
+
+# 
+# Production Stage
+# 
+FROM node:18-alpine
+
+WORKDIR /app
+
+COPY --from=builder /app .
+
+RUN npm prune --production
 
 EXPOSE 3000
 
