--- a/gitops/nonprod/sample-app/deployment.yaml
+++ b/gitops/nonprod/sample-app/deployment.yaml
@@ -18,3 +18,40 @@ spec:
           image: 842303506852.dkr.ecr.eu-west-1.amazonaws.com/cloud-native-sample-app:97f786a59c58e8134feac8fc8f1053799a3dd966
           ports:
             - containerPort: 3000
+
+          env:
+            - name: MONGODB_URI
+              valueFrom:
+                secretKeyRef:
+                  name: mongo-secret
+                  key: MONGODB_URI
+
+            - name: DB_NAME
+              value: "nti-db"
+
+            - name: COLLECTION_NAME
+              value: "messages"
+
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 3000
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            failureThreshold: 3
+
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 3000
+            initialDelaySeconds: 20
+            periodSeconds: 15
+            failureThreshold: 5
+
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "300m"
+              memory: "256Mi"
