--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,25 +1,13 @@
-# 
-# Build Stage
-# 
-FROM node:18-alpine AS builder
-
-WORKDIR /app
-
-COPY package.json package-lock.json* ./
-RUN npm install
-
-COPY . .
-
-# 
-# Production Stage
-# 
 FROM node:18-alpine
 
 WORKDIR /app
 
-COPY --from=builder /app .
+RUN apk add --no-cache ca-certificates
 
-RUN npm prune --production
+COPY package.json package-lock.json* ./
+RUN npm install --production
+
+COPY . .
 
 EXPOSE 3000
 
