Replace mongo-secret with ExternalSecret + SecretStore

--- a/gitops/nonprod/sample-app/kustomization.yaml
+++ b/gitops/nonprod/sample-app/kustomization.yaml
@@ -2,4 +2,5 @@ resources:
   - deployment.yaml
   - service.yaml
   - ingress.yaml
-  - mongo-secret.yaml
+  - secretstore.yaml
+  - externalsecret.yaml
